// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render the navigation authed 1`] = `
<div>
  <BrowserRouter>
    <SplitPane
      allowResize={true}
      defaultSize={100}
      minSize={50}
      pane1ClassName=""
      pane2ClassName=""
      paneClassName=""
      primary="first"
      split="vertical"
    >
      <div>
        <div />
        <Link
          to="/signup"
        >
          Sign Up
          <br />
        </Link>
        <Link
          to="/login"
        >
          Log In
          <br />
        </Link>
        <Link
          to="/dashboard"
        >
          Dashboard
          <br />
        </Link>
        <Link
          to="/payment"
        >
          My Wallet
          <br />
        </Link>
        <button
          id="signOut"
          onClick={[Function]}
        >
          Log Out
        </button>
      </div>
      <div>
        <Route
          component={[Function]}
          exact={true}
          key="0"
          path="/signup"
        />
        <Route
          component={[Function]}
          exact={true}
          key="1"
          path="/login"
        />
        <Route
          component={[Function]}
          exact={true}
          key="2"
          path="/dashboard"
        />
        <Route
          component={[Function]}
          exact={true}
          key="3"
          path="/payment"
        />
        <Route
          component={[Function]}
          exact={true}
          key="4"
          path="/email"
        />
      </div>
    </SplitPane>
  </BrowserRouter>
</div>
`;

exports[`Render the navigation unauthed 1`] = `
<div>
  <BrowserRouter>
    <SplitPane
      allowResize={true}
      defaultSize={100}
      minSize={50}
      pane1ClassName=""
      pane2ClassName=""
      paneClassName=""
      primary="first"
      split="vertical"
    >
      <div>
        <div />
        <Link
          to="/signup"
        >
          Sign Up
          <br />
        </Link>
        <Link
          to="/login"
        >
          Log In
          <br />
        </Link>
      </div>
      <div>
        <Route
          component={[Function]}
          exact={true}
          key="0"
          path="/signup"
        />
        <Route
          component={[Function]}
          exact={true}
          key="1"
          path="/login"
        />
        <Route
          component={[Function]}
          exact={true}
          key="2"
          path="/dashboard"
        />
        <Route
          component={[Function]}
          exact={true}
          key="3"
          path="/email"
        />
      </div>
    </SplitPane>
  </BrowserRouter>
</div>
`;
